// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCard renders correctly with checkbox type 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-x0fj73-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m6,
.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-x0fj73-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="false"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-x0fj73-CheckboxContainer-StyledElement eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-mhe016-CheckboxInput eu28k4m2"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1m7zzqc-StyledIcon eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eu28k4m7"
            height="14"
            rx="1"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and checked prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-x0fj73-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m6,
.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-x0fj73-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="true"
    data-disabled="false"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-x0fj73-CheckboxContainer-StyledElement eu28k4m1"
      data-checked="true"
      data-error="false"
    >
      <input
        aria-invalid="false"
        checked=""
        class="cache-mhe016-CheckboxInput eu28k4m2"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1m7zzqc-StyledIcon eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eu28k4m7"
            height="14"
            rx="1"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and disabled prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-x0fj73-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m6,
.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-x0fj73-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="true"
  >
    <label
      aria-disabled="true"
      class="ejleepd0 cache-x0fj73-CheckboxContainer-StyledElement eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-mhe016-CheckboxInput eu28k4m2"
        disabled=""
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1m7zzqc-StyledIcon eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eu28k4m7"
            height="14"
            rx="1"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and isError prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-x0fj73-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m6,
.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-x0fj73-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

.cache-1l9l4mf-StyledText-PaddedText {
  color: #a6102d;
  font-size: 14px;
  font-family: Asap;
  font-weight: 400;
  letter-spacing: 0;
  line-height: 20px;
  text-transform: none;
  -webkit-text-decoration: none;
  text-decoration: none;
  padding: 0 4px;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-x0fj73-CheckboxContainer-StyledElement eu28k4m1"
      data-checked="false"
      data-error="true"
    >
      <input
        aria-describedby="radio-hint"
        aria-invalid="true"
        class="cache-mhe016-CheckboxInput eu28k4m2"
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1m7zzqc-StyledIcon eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eu28k4m7"
            height="14"
            rx="1"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    <p
      class="eu28k4m4 cache-1l9l4mf-StyledText-PaddedText e1tg3t120"
    />
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with checkbox type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-x0fj73-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m6,
.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-x0fj73-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    aria-describedby=":rn:"
  >
    <div
      class="cache-dgvm93-Container ejleepd1"
      data-checked="false"
      data-disabled="false"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-x0fj73-CheckboxContainer-StyledElement eu28k4m1"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-invalid="false"
          class="cache-mhe016-CheckboxInput eu28k4m2"
          name="checkbox"
          type="checkbox"
          value="choice"
        />
        <svg
          class="cache-1m7zzqc-StyledIcon eu28k4m3"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <rect
              class="cache-uzcbt1-InnerCheckbox eu28k4m7"
              height="14"
              rx="1"
              stroke-width="2"
              width="14"
              x="5"
              y="5"
            />
            <rect
              class="cache-1nkq693-CheckMixedMark eu28k4m5"
              height="2"
              rx="1"
              width="8"
              x="8"
              y="11"
            />
            <rect
              class="cache-1nu9t2r-CheckMark eu28k4m6"
              height="8"
              rx="1"
              width="8"
              x="8"
              y="8"
            />
          </g>
        </svg>
      </label>
      Checkbox card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with complex children 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-x0fj73-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m6,
.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-x0fj73-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-x0fj73-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-x0fj73-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-x0fj73-CheckboxContainer-StyledElement input+svg {
  display: none;
}

.cache-x0fj73-CheckboxContainer-StyledElement label {
  display: none;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="true"
  >
    <label
      aria-disabled="true"
      class="ejleepd0 cache-x0fj73-CheckboxContainer-StyledElement eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-mhe016-CheckboxInput eu28k4m2"
        disabled=""
        name="radio"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1m7zzqc-StyledIcon eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eu28k4m7"
            height="14"
            rx="1"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    <div
      style="background: gray; color: gray;"
    >
      Complex radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with default props 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1ozl0jl-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1ozl0jl-RadioContainer-StyledElement label {
  display: none;
}

.cache-drr0yu-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-drr0yu-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-drr0yu-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-drr0yu-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-drr0yu-RadioInput[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="false"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-1ozl0jl-RadioContainer-StyledElement e1duuirp0"
      data-checked="false"
      for="radio-choice"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-drr0yu-RadioInput e1duuirp1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </label>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and checked prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1ozl0jl-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1ozl0jl-RadioContainer-StyledElement label {
  display: none;
}

.cache-drr0yu-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-drr0yu-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-drr0yu-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-drr0yu-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-drr0yu-RadioInput[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="true"
    data-disabled="false"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-1ozl0jl-RadioContainer-StyledElement e1duuirp0"
      data-checked="true"
      for="radio-choice"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        checked=""
        class="cache-drr0yu-RadioInput e1duuirp1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </label>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and disabled prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1ozl0jl-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1ozl0jl-RadioContainer-StyledElement label {
  display: none;
}

.cache-drr0yu-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-drr0yu-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-drr0yu-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-drr0yu-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-drr0yu-RadioInput[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="true"
  >
    <label
      aria-disabled="true"
      class="ejleepd0 cache-1ozl0jl-RadioContainer-StyledElement e1duuirp0"
      data-checked="false"
      for="radio-choice"
    >
      <input
        aria-disabled="true"
        aria-invalid="false"
        class="cache-drr0yu-RadioInput e1duuirp1"
        disabled=""
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </label>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and isError prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1ozl0jl-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1ozl0jl-RadioContainer-StyledElement label {
  display: none;
}

.cache-drr0yu-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-drr0yu-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-drr0yu-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-drr0yu-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-drr0yu-RadioInput[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="false"
    data-error="true"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-1ozl0jl-RadioContainer-StyledElement e1duuirp0"
      data-checked="false"
      data-error="true"
      for="radio-choice"
    >
      <input
        aria-disabled="false"
        aria-invalid="true"
        class="cache-drr0yu-RadioInput e1duuirp1"
        id="radio-choice"
        name="radio"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </label>
    Radio card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with radio type and tooltip prop 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-1ozl0jl-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=radio-choice][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-1ozl0jl-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-1ozl0jl-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-1ozl0jl-RadioContainer-StyledElement input+svg {
  display: none;
}

.cache-1ozl0jl-RadioContainer-StyledElement label {
  display: none;
}

.cache-drr0yu-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-drr0yu-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-drr0yu-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-drr0yu-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-drr0yu-RadioInput[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    aria-describedby=":rl:"
  >
    <div
      class="cache-dgvm93-Container ejleepd1"
      data-checked="false"
      data-disabled="false"
    >
      <label
        aria-disabled="false"
        class="ejleepd0 cache-1ozl0jl-RadioContainer-StyledElement e1duuirp0"
        data-checked="false"
        for="radio-choice"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-drr0yu-RadioInput e1duuirp1"
          id="radio-choice"
          name="radio"
          type="radio"
          value="choice"
        />
        <svg
          class="cache-gjpbat-StyledIcon e1duuirp2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-p50c5x-InnerCircleRing e1duuirp4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-ivayk3-RadioMark e1duuirp3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </label>
      Radio card
    </div>
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type checkbox 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-vffpl5-CheckboxContainer-StyledElement {
  position: relative;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-vffpl5-CheckboxContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-vffpl5-CheckboxContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-vffpl5-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 {
  fill: #c4c9d6;
}

.cache-vffpl5-CheckboxContainer-StyledElement[aria-disabled='true'] .eu28k4m3 .eu28k4m7 {
  stroke: #c4c9d6;
  fill: #f6f6f8;
}

.cache-vffpl5-CheckboxContainer-StyledElement .eu28k4m6,
.cache-vffpl5-CheckboxContainer-StyledElement .eu28k4m5 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-vffpl5-CheckboxContainer-StyledElement .eu28k4m2:checked+.eu28k4m3 .eu28k4m6 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-vffpl5-CheckboxContainer-StyledElement .eu28k4m2[aria-checked="mixed"]+.eu28k4m3 .eu28k4m5 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-vffpl5-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-vffpl5-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-vffpl5-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-vffpl5-CheckboxContainer-StyledElement:hover[aria-disabled='false'] .eu28k4m2[aria-invalid="true"]+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-vffpl5-CheckboxContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-vffpl5-CheckboxContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-vffpl5-CheckboxContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-mhe016-CheckboxInput {
  position: absolute;
  white-space: nowrap;
  height: 24px;
  width: 24px;
  opacity: 0;
  border-width: 0;
}

.cache-mhe016-CheckboxInput:not(:disabled) {
  cursor: pointer;
}

.cache-mhe016-CheckboxInput:disabled {
  cursor: not-allowed;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 {
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:checked+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-checked='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 {
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']+.eu28k4m3 .eu28k4m7,
.cache-mhe016-CheckboxInput[aria-invalid='mixed']+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-mhe016-CheckboxInput:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #4f0599;
  fill: #eeeeff;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 {
  background-color: #ffe1e7;
  fill: #dd3252;
}

.cache-mhe016-CheckboxInput[aria-invalid='true']:focus+.eu28k4m3 .eu28k4m7 {
  stroke: #dd3252;
  fill: #ffe1e7;
}

.cache-1m7zzqc-StyledIcon {
  margin-right: 8px;
  border-radius: 4px;
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
}

.cache-uzcbt1-InnerCheckbox {
  fill: #ffffff;
  stroke: #b2b6c3;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="false"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-vffpl5-CheckboxContainer-StyledElement eu28k4m1"
      data-checked="false"
      data-error="false"
    >
      <input
        aria-invalid="false"
        class="cache-mhe016-CheckboxInput eu28k4m2"
        name="checkbox"
        type="checkbox"
        value="choice"
      />
      <svg
        class="cache-1m7zzqc-StyledIcon eu28k4m3"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <rect
            class="cache-uzcbt1-InnerCheckbox eu28k4m7"
            height="14"
            rx="1"
            stroke-width="2"
            width="14"
            x="5"
            y="5"
          />
          <rect
            class="cache-1nkq693-CheckMixedMark eu28k4m5"
            height="2"
            rx="1"
            width="8"
            x="8"
            y="11"
          />
          <rect
            class="cache-1nu9t2r-CheckMark eu28k4m6"
            height="8"
            rx="1"
            width="8"
            x="8"
            y="8"
          />
        </g>
      </svg>
    </label>
    Checkbox card
  </div>
</DocumentFragment>
`;

exports[`SelectableCard renders correctly with showTick and type radio 1`] = `
<DocumentFragment>
  .cache-dgvm93-Container {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  border: 1px solid #d4dae7;
  color: #4a4f62;
}

.cache-dgvm93-Container[data-checked='true'] {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container[data-error='true'] {
  border: 1px solid #a6102d;
}

.cache-dgvm93-Container[data-disabled='true'] {
  border: 1px solid #d4dae7;
  color: #c4c9d6;
  background: #f6f6f8;
  cursor: not-allowed;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #4f0599;
}

.cache-dgvm93-Container:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-dgvm93-Container:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #EEEEFFCC;
}

.cache-8a30d2-RadioContainer-StyledElement {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-8a30d2-RadioContainer-StyledElement[aria-disabled='false'] {
  cursor: pointer;
}

.cache-8a30d2-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=checkbox-choice]+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-8a30d2-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=checkbox-choice]+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-8a30d2-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=checkbox-choice][aria-invalid='true']+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-8a30d2-RadioContainer-StyledElement:hover[aria-disabled='false'] .e1duuirp1[id=checkbox-choice][aria-invalid='true']+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-8a30d2-RadioContainer-StyledElement[aria-disabled='true'] {
  cursor: not-allowed;
  color: #c4c9d6;
}

.cache-8a30d2-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 {
  fill: #c4c9d6;
}

.cache-8a30d2-RadioContainer-StyledElement[aria-disabled='true'] .e1duuirp2 .e1duuirp4 {
  fill: #f6f6f8;
}

.cache-8a30d2-RadioContainer-StyledElement[data-checked='true'] {
  color: #4f0599;
}

.cache-8a30d2-RadioContainer-StyledElement[data-error='true'] {
  color: #a6102d;
}

.cache-8a30d2-RadioContainer-StyledElement[aria-disabled='true'] {
  color: #c4c9d6;
}

.cache-drr0yu-RadioInput {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-drr0yu-RadioInput+.e1duuirp2 .e1duuirp3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-drr0yu-RadioInput:checked+svg .e1duuirp3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-drr0yu-RadioInput:checked[aria-disabled='false'][aria-invalid='false']+.e1duuirp2 {
  fill: #4f0599;
}

.cache-drr0yu-RadioInput[aria-invalid='true']+.e1duuirp2 {
  fill: #a6102d;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 {
  background-color: #eeeeff;
  fill: #4f0599;
}

.cache-drr0yu-RadioInput:focus+.e1duuirp2 .e1duuirp4 {
  fill: #eeeeff;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 {
  background-color: #ffe1e7;
  fill: #a6102d;
}

.cache-drr0yu-RadioInput[aria-invalid='true']:focus+.e1duuirp2 .e1duuirp4 {
  fill: #ffe1e7;
}

.cache-gjpbat-StyledIcon {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #b2b6c3;
}

.cache-gjpbat-StyledIcon .e1duuirp4 {
  fill: #ffffff;
}

.cache-p50c5x-InnerCircleRing {
  fill: #ffffff;
}

<div
    class="cache-dgvm93-Container ejleepd1"
    data-checked="false"
    data-disabled="false"
  >
    <label
      aria-disabled="false"
      class="ejleepd0 cache-8a30d2-RadioContainer-StyledElement e1duuirp0"
      data-checked="false"
      for="checkbox-choice"
    >
      <input
        aria-disabled="false"
        aria-invalid="false"
        class="cache-drr0yu-RadioInput e1duuirp1"
        id="checkbox-choice"
        name="checkbox"
        type="radio"
        value="choice"
      />
      <svg
        class="cache-gjpbat-StyledIcon e1duuirp2"
        size="24"
        viewBox="0 0 24 24"
      >
        <g>
          <circle
            cx="12"
            cy="12"
            r="8"
            stroke-width="2"
          />
          <circle
            class="cache-p50c5x-InnerCircleRing e1duuirp4"
            cx="12"
            cy="12"
            r="6"
          />
          <circle
            class="cache-ivayk3-RadioMark e1duuirp3"
            cx="12"
            cy="12"
            r="4"
          />
        </g>
      </svg>
    </label>
    Checkbox card
  </div>
</DocumentFragment>
`;
